--- a/_posts/2015-01-31-welcome.md
+++ b/_posts/2015-01-31-welcome.md
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: "Welcome to jekyll-minimal-theme - Another Minimal Jekyll Theme"
+title: "Welcome to my Laboratory"
 ---
+Here is some text
 
 What's `jekyll-minimal-theme`?
 
