--- a/_posts/2015-01-31-welcome.md
+++ b/_posts/2015-01-31-welcome.md
@@ -4,6 +4,8 @@ title: "Welcome to my Laboratory"
 ---
 Here is some text
 
+What are you doing here!
+
 What's `jekyll-minimal-theme`?
 
 It's another minimal(istic) Jekyll static site generator theme,
