--- a/_posts/2015-01-31-welcome.md
+++ b/_posts/2015-01-31-welcome.md
@@ -6,6 +6,8 @@ Here is some text
 
 What are you doing here!
 
+Quick, Look over there!
+
 What's `jekyll-minimal-theme`?
 
 It's another minimal(istic) Jekyll static site generator theme,
