--- a/_posts/2015-01-31-welcome.md
+++ b/_posts/2015-01-31-welcome.md
@@ -8,6 +8,8 @@ What are you doing here!
 
 Quick, Look over there!
 
+It's a distraction!
+
 What's `jekyll-minimal-theme`?
 
 It's another minimal(istic) Jekyll static site generator theme,
